[package]
name = "music-bot"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
music-theory-query = "0.1.3"
